--- a/package.json
+++ b/package.json
@@ -1,10 +1,17 @@
 {
-  "name": "@renanhangai/vue-di",
-  "version": "0.0.0",
-  "description": "Dependency injection for vue",
-  "main": "dist/index.js",
-  "license": "MIT",
-  "devDependencies": {
-    "typescript": "^3.6.4"
-  }
+	"name": "@renanhangai/vue-di",
+	"version": "0.0.0",
+	"description": "Dependency injection for vue",
+	"main": "dist/index.js",
+	"license": "MIT",
+	"dependencies": {
+		"tsyringe": "^3.4.0"
+	},
+	"devDependencies": {
+		"typescript": "^3.6.4",
+		"vue": "^2.6.10"
+	},
+	"scripts": {
+		"build": "tsc "
+	}
 }
