chore: Updated plugin

--- a/package.json
+++ b/package.json
@@ -8,10 +8,17 @@
 		"tsyringe": "^3.4.0"
 	},
 	"devDependencies": {
+		"npm-run-all": "^4.1.5",
+		"rimraf": "^3.0.0",
 		"typescript": "^3.6.4",
 		"vue": "^2.6.10"
 	},
+	"peerDependencies": {
+		"reflect-metadata": "^0.1.13"
+	},
 	"scripts": {
-		"build": "tsc "
+		"build": "tsc",
+		"clean": "rimraf dist",
+		"prepack": "run-s clean build"
 	}
 }
