--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
 	"compilerOptions": {
 		"lib": ["es2015", "dom"],
 		"target": "esnext",
-		"module": "commonjs",
+		"module": "esnext",
+		"moduleResolution": "node",
 		"rootDir": "src",
 		"outDir": "dist",
 		"strict": true,
