--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
 	"name": "@renanhangai/vue-di",
 	"version": "0.1.3",
 	"description": "Dependency injection for vue",
+	"repository": "git@gitlab.com:renanhangai_/vue/vue-di.git",
+	"author": "renanhangai <hangai.renan@gmail.com>",
 	"main": "dist/index.js",
 	"license": "MIT",
 	"dependencies": {
