--- a/package.json
+++ b/package.json
@@ -7,17 +7,18 @@
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
 	"license": "MIT",
-	"dependencies": {
-		"tsyringe": "^3.4.0"
-	},
+	"dependencies": {},
 	"devDependencies": {
 		"npm-run-all": "^4.1.5",
-		"rimraf": "^3.0.0",
-		"typescript": "^3.6.4",
-		"vue": "^2.6.10"
+		"reflect-metadata": "^0.1.13",
+		"rimraf": "^3.0.2",
+		"tsyringe": "^4.0.1",
+		"typescript": "^3.7.5",
+		"vue": "^2.6.11"
 	},
 	"peerDependencies": {
-		"reflect-metadata": "^0.1.13"
+		"reflect-metadata": "^0.1.13",
+		"tsyringe": "^4.0.1"
 	},
 	"scripts": {
 		"build": "tsc",
