--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"npm-run-all": "^4.1.5",
 		"reflect-metadata": "^0.1.13",
 		"rimraf": "^3.0.2",
+		"standard-version": "^7.1.0",
 		"tsyringe": "^4.0.1",
 		"typescript": "^3.7.5",
 		"vue": "^2.6.11"
@@ -23,6 +24,7 @@
 	"scripts": {
 		"build": "tsc",
 		"clean": "rimraf dist",
-		"prepack": "run-s clean build"
+		"prepack": "run-s clean build",
+		"release": "standard-version"
 	}
 }
