--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-	"name": "@renanhangai/vue-di",
+	"name": "@rhangai/vue-di",
 	"version": "0.2.0",
 	"description": "Dependency injection for vue",
-	"repository": "git@gitlab.com:renanhangai_/vue/vue-di.git",
-	"author": "renanhangai <hangai.renan@gmail.com>",
+	"repository": "https://github.com/rhangai/vue-di.git",
+	"author": "rhangai <hangai.renan@gmail.com>",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
 	"license": "MIT",
@@ -13,13 +13,13 @@
 		"reflect-metadata": "^0.1.13",
 		"rimraf": "^3.0.2",
 		"standard-version": "^7.1.0",
-		"tsyringe": "^4.0.1",
-		"typescript": "^3.7.5",
+		"tsyringe": "^4.1.0",
+		"typescript": "^3.8.3",
 		"vue": "^2.6.11"
 	},
 	"peerDependencies": {
 		"reflect-metadata": "^0.1.13",
-		"tsyringe": "^4.0.1"
+		"tsyringe": "^4.1.0"
 	},
 	"scripts": {
 		"build": "tsc",
