--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
 	"description": "Dependency injection for vue",
 	"repository": "https://github.com/rhangai/vue-di.git",
 	"author": "rhangai <hangai.renan@gmail.com>",
-	"main": "dist/index.js",
-	"types": "dist/index.d.ts",
+	"main": "lib/index.js",
+	"types": "lib/index.d.ts",
 	"license": "MIT",
 	"dependencies": {},
 	"devDependencies": {
@@ -23,7 +23,7 @@
 	},
 	"scripts": {
 		"build": "tsc",
-		"clean": "rimraf dist",
+		"clean": "rimraf lib",
 		"prepack": "run-s clean build",
 		"release": "standard-version"
 	}
