chore: Updated prettier

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,12 +1,13 @@
 {
-	"eslintIntegration": true,
-	"tabWidth": 4,
 	"useTabs": true,
 	"singleQuote": true,
 	"trailingComma": "es5",
-	"printWidth": 120,
-	"[yml]": {
-		"tabWidth": 2,
-		"useTabs": false
-	}
+	"overrides": [
+		{
+			"files": ["package.json"],
+			"options": {
+				"useTabs": false
+			}
+		}
+	]
 }
