--- a/package.json
+++ b/package.json
@@ -9,22 +9,28 @@
   "license": "MIT",
   "dependencies": {},
   "devDependencies": {
+    "@types/jest": "^25.1.4",
+    "@vue/test-utils": "^1.0.0-beta.32",
+    "jest": "^25.1.0",
     "npm-run-all": "^4.1.5",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "standard-version": "^7.1.0",
+    "ts-jest": "^25.2.1",
     "tsyringe": "^4.1.0",
     "typescript": "^3.8.3",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-template-compiler": "^2.6.11"
   },
   "peerDependencies": {
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.1.0"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "tsc -p tsconfig.build.json",
     "clean": "rimraf lib",
     "prepack": "run-s clean build",
-    "release": "standard-version"
+    "release": "standard-version",
+    "test": "jest"
   }
 }
