--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,13 @@
 {
 	"compilerOptions": {
-		"lib": ["es2015", "dom"],
-		"target": "esnext",
-		"module": "esnext",
+		"lib": ["es2018", "dom"],
+		"target": "es2018",
+		"module": "es2015",
 		"moduleResolution": "node",
-		"rootDir": "src",
-		"outDir": "lib",
+		"rootDir": ".",
 		"strict": true,
 		"declaration": true,
-		"esModuleInterop": true
+		"esModuleInterop": true,
+		"experimentalDecorators": true
 	}
 }
