--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
   "name": "@rhangai/vue-di",
   "version": "0.3.2",
-  "description": "Dependency injection for vue",
+  "description": "Dependency injection for vue using tsyringe",
   "repository": "https://github.com/rhangai/vue-di.git",
   "author": "rhangai <hangai.renan@gmail.com>",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "license": "MIT",
+  "keywords": [
+    "vue di",
+    "vue inject",
+    "vue dependency",
+    "vue tsyringe"
+  ],
   "dependencies": {},
   "devDependencies": {
     "@types/jest": "^25.1.4",
